kubernetes/apps/kube-system/cilium/config/egress-kubeapi.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-kubeapi
spec:
  endpointSelector:
    matchLabels:
      policy.martin.com/egress-kubeapi: "true"
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
            - port: "6443"
